--- a/signup-page.html
+++ b/signup-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="signup-page-style.css">
+    <link rel="stylesheet" href="./styles/signup-page-style.css">
 <title>Create an Issue Tracker account</title>
 </head>
 <body>
