--- a/Login-HTML.html
+++ b/Login-HTML.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="LoginStyle.css">
+<link rel="stylesheet" href="./styles/LoginStyle.css">
 </head>
 
 <body>
