--- a/forgetPSW.html
+++ b/forgetPSW.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="forgetPSWstyle.css">
+<link rel="stylesheet" href="./styles/forgetPSWstyle.css">
 </head>
 
 <body>
