--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="./styles/LoginStyle.css">
+<link rel="stylesheet" href="./styles/login.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 
     <br>
     <button type="button" class="cancelbtn" >Cancel</button>
-    <span class="psw"><a href="forgetPSW.html">Forgot password?</a></span>
+    <span class="psw"><a href="forget-password.html">Forgot password?</a></span>
 
   </div>
 
