--- a/ListProject.html
+++ b/ListProject.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script type="text/javascript" src="ListProject.js"></script>
-<link rel="stylesheet" href="ListProject.css">
+<link rel="stylesheet" href="/styles/ListProject.css">
 
 </head>
 <body>
