--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IssueTracker</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="./script/index.js" defer></script>
 </head>
 <body>
     <div class="body-container">
@@ -13,8 +14,8 @@
             <h1>Issue Tracker</h1>
             <nav id="main-nav">
                 <ul>
-                    <li><a href="#">Login</a></li>
-                    <li><a href="#">Sign Up</a></li>
+                    <li><a href="./login.html">Login</a></li>
+                    <li><a href="./signup-page.html">Sign Up</a></li>
                 </ul>
             </nav>
         </header>
