--- a/client/signup-page.html
+++ b/client/signup-page.html
@@ -2,33 +2,38 @@
 <html>
 <head>
     <link rel="stylesheet" href="./styles/signup-page-style.css">
-<title>Create an Issue Tracker account</title>
+    <title>Create an Issue Tracker account</title>
+    <script src="./script/index.js" defer></script>
 </head>
 <body>
     <h1>Issue Tracker</h1>
      <div class="screen">
-         <form>
+         <form id="register-form" method="POST" action="project.html" >
              <div class="sign-up-form">
                 <section class="copy">
                     <h2>Sign up</h2>
                 </section>
                 <div class="input-container email">
                     <strong><label for="email">Email</label></strong>
-                    <input id="email" name="email" placeholder="Enter email adress" type="email">
+                    <input id="email" name="email" placeholder="Enter email adress" 
+                           type="email" required>
                 </div>
                 <div class="input-container name">
                     <strong><label for="fname">Full name</label></strong>
-                    <input id="fname" name="fname" placeholder="Enter full name" type="text">
+                    <input id="fname" name="fname" placeholder="Enter full name" type="text" required>
                 </div>
                 <div class="input-container password">
                     <strong><label for="password">Password</label></strong>
-                    <input id="password" name="password" placeholder="Enter password" type="password">
+                    <input id="password" name="password" placeholder="Enter password" type="password" required>
                     <i class="far fa-eye-slash"></i>
                 </div>
                 <button class="signup-btn" type="submit">Sign up</button>
                 <div class="login-container">
                     <p>Already have an account? <a href="#">
                     <strong>Log in</strong></a></p>
+                </div>
+                <div id="error">
+                    <p id="error-message"></p>
                 </div>
              </div>
          </form>
