--- a/client/list-projects.html
+++ b/client/list-projects.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/client/styles/list-projects-style.css">
+    <link rel="stylesheet" href="./styles/list-projects-style.css">
 
 </head>
 
@@ -13,6 +13,6 @@
     <div id="container" style="width:800px; margin-top: 30px; margin-left: 230px;"></div>
 
 </body>
-<script type="text/javascript" src="/client/script/list-projects.js"></script>
+<script type="text/javascript" src="./script/list-projects.js"></script>
 
 </html>
