--- a/client/project.html
+++ b/client/project.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles/style.css">
-        <script src="./script/index.js" defer></script>
     </head>
     <body>
+        <div class="container">
+            <div id="header">
+                <h1 id="project-header">
+                    Projects
+                </h1>    
+            </div>
+            
+            <div id="form">
+                <h2 id="project-form-header">Add project</h1>
+                <form id="project-form" method="POST"  enctype="multipart/form-data">
+                    <label for="projectName" id="label-name"><b>Project name</b></label>
+                    <input type="text" placeholder="Project name" name="projectName" id="project-name">
+                    <input type="file" id="project-image" name="image" >
+                    <button type="submit" class="btn btn-secondary btn-lg" id="add-project-btn">Add</button>
+                </form>
+            </div>
+    
+            <div id="project-list-container">
+               <!-- <div id="project-list-item">
+                    <h3 id="project-list-name">Issue tracker</h3>
+                    <img src="./images/word-image.png" alt="Project image">
+                    <div id="box">
+                        <button id="btn-edit" class="btn btn-primary" data-toggle="modal" data-target="#editModal">Edit</button>
+                        <button id="btn-delete" class="btn btn-danger">Delete</button>
+                    </div>
+                </div>
+                <div id="project-list-item">
+                    <h3 id="project-list-name">Issue tracker</h3>
+                    <img src="./images/word-image.png" alt="Project image">
+                    <div id="box">
+                        <button id="btn-edit" class="btn btn-primary" data-toggle="modal" data-target="#editModal">Edit</button>
+                        <button id="btn-delete" class="btn btn-danger">Delete</button>
+                    </div>
+                </div> -->
+            </div>
 
+            <!-- Modal -->
+            <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="editModalLabel">Edit project</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+
+        <script src="./script/project.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
