add edit project

--- a/client/project.html
+++ b/client/project.html
@@ -48,17 +48,25 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="editModalLabel">Edit project</h5>
+
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
+                    <form id="edit-project" method="PUT"  enctype="multipart/form-data">
+
                     <div class="modal-body">
+                            <label for="projectName" id="label-name"><b>Project name</b></label>
+                        <input type="text" placeholder="Project name" name="projectName" id="project-name">
+                        <input type="file" id="project-image" name="image" >
 
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="submit" class="btn btn-secondary btn-lg" id="submit-project-btn">Save changes</button>
+
                     </div>
+                </form>
                 </div>
             </div>
             </div>
