--- a/client/project.html
+++ b/client/project.html
@@ -21,7 +21,7 @@
                     <input type="text" placeholder="Project name" name="projectName" id="project-name">
 
                     <div id="status" class="liStatus">
-                        <input type="text" class="statusInput" id="status-input" placeholder="Add status...">
+                        <input type="text" class="statusInput" name="status" id="status-input" placeholder="Add status...">
                         <span onclick="newElement()" class="addStatus">Add statuses</span>
                       </div>
                       
