--- a/client/login.html
+++ b/client/login.html
@@ -21,7 +21,7 @@
       <label for="password"><b>Password</b></label>
       <input id="password" type="password" placeholder="Enter Password" name="password" required>
           
-      <button type="submit">Log in</button>
+      <button id="submit-btn" type="submit">Log in</button>
       <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
