--- a/client/signup-page.html
+++ b/client/signup-page.html
@@ -25,7 +25,7 @@
                 <label for="password">Password</label>
                     <input id="password" name="password" placeholder="Enter password" type="password" required>
                     
-                <button class="signup-btn" type="submit">Sign up</button>
+                <button id="submit-btn" class="signup-btn" type="submit">Sign up</button>
                 <div class="login-container">
                     <p>Already have an account? <a href="#">
                     <strong>Log in</strong></a></p>
