--- a/client/project.html
+++ b/client/project.html
@@ -12,63 +12,45 @@
                     Projects
                 </h1>    
             </div>
-            
+
             <div id="form">
                 <h2 id="project-form-header">Add project</h1>
                 <form id="project-form" method="POST"  enctype="multipart/form-data">
-                    <label for="projectName" id="label-name"><b>Project name</b></label>
-                    <input type="text" placeholder="Project name" name="projectName" id="project-name">
+                    <label for="projectName" id="label-name" class="col-form-label">Project name</label>
+                    <input type="text" placeholder="Project name" name="projectName" id="project-name" class="form-control">
                     <input type="file" id="project-image" name="image" >
                     <button type="submit" class="btn btn-secondary btn-lg" id="add-project-btn">Add</button>
                 </form>
             </div>
     
             <div id="project-list-container">
-               <!-- <div id="project-list-item">
-                    <h3 id="project-list-name">Issue tracker</h3>
-                    <img src="./images/word-image.png" alt="Project image">
-                    <div id="box">
-                        <button id="btn-edit" class="btn btn-primary" data-toggle="modal" data-target="#editModal">Edit</button>
-                        <button id="btn-delete" class="btn btn-danger">Delete</button>
-                    </div>
-                </div>
-                <div id="project-list-item">
-                    <h3 id="project-list-name">Issue tracker</h3>
-                    <img src="./images/word-image.png" alt="Project image">
-                    <div id="box">
-                        <button id="btn-edit" class="btn btn-primary" data-toggle="modal" data-target="#editModal">Edit</button>
-                        <button id="btn-delete" class="btn btn-danger">Delete</button>
-                    </div>
-                </div> -->
             </div>
 
             <!-- Modal -->
             <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="editModalLabel">Edit project</h5>
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <h5 class="modal-title" id="editModalLabel">Edit project</h5>
 
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <form id="edit-project" method="PUT"  enctype="multipart/form-data">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                          </button>
+                      </div>
 
-                    <div class="modal-body">
-                            <label for="projectName" id="label-name"><b>Project name</b></label>
-                        <input type="text" placeholder="Project name" name="projectName" id="project-name">
-                        <input type="file" id="project-image" name="image" >
-
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-secondary btn-lg" id="submit-project-btn">Save changes</button>
-
-                    </div>
-                </form>
-                </div>
-            </div>
+                      <form id="edit-form" method="POST"  enctype="multipart/form-data">
+                          <div class="modal-body">
+                              <label for="projectName" id="label-name" class="col-form-label">Project name</label>
+                              <input type="text" placeholder="Project name" name="projectName" id="project-name" class="form-control">
+                              <input type="file" id="project-image" name="image" >
+                          </div>
+                          <div class="modal-footer">
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                              <button type="submit" class="btn btn-primary" id="edit-project-btn">Save changes</button>
+                          </div>
+                      </form>
+                  </div>
+              </div>
             </div>
         </div>
 
