Added update functionality

--- a/client/project.html
+++ b/client/project.html
@@ -41,8 +41,8 @@
                       <form id="edit-form" method="POST"  enctype="multipart/form-data">
                           <div class="modal-body">
                               <label for="projectName" id="label-name" class="col-form-label">Project name</label>
-                              <input type="text" placeholder="Project name" name="projectName" id="project-name" class="form-control">
-                              <input type="file" id="project-image" name="image" >
+                              <input type="text" placeholder="Project name" name="projectName" id="edit-project-name" class="form-control">
+                              <input type="file" id="edit-project-image" name="image" >
                           </div>
                           <div class="modal-footer">
                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
