--- a/client/login.html
+++ b/client/login.html
@@ -27,7 +27,7 @@
       </label>
 
       <br>
-      <button type="button" class="cancelbtn" >Cancel</button>
+      <!-- <button type="button" class="cancelbtn" >Cancel</button> -->
       <div id="error">
         <p id="error-message"></p>
      </div>
