--- a/client/signup-page.html
+++ b/client/signup-page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="./styles/signup-page-style.css">
-    <title>Create an Issue Tracker account</title>
+    <title>Register</title>
     <script src="./script/index.js" defer></script>
 </head>
 <body>
@@ -27,7 +27,7 @@
                     
                 <button id="submit-btn" class="signup-btn" type="submit">Sign up</button>
                 <div class="login-container">
-                    <p>Already have an account? <a href="#">
+                    <p>Already have an account? <a href="./login.html">
                     <strong>Log in</strong></a></p>
                 </div>
                 <div id="error">
