--- a/client/main-board.html
+++ b/client/main-board.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <div class="header">
@@ -14,100 +18,147 @@
     <div class="main">
       <section class="lists-container">
         <div class="list">
-          <h3 class="list-title">TO-DO</h3>
-          <ul class="list-items">
-            <li>Something cool with CSS Grid</li>
-            <li>Something cool with CSS Flexbox</li>
-            <li>Something cool with CSS animations</li>
-            <li>Something cool with CSS gradients</li>
-            <li>Something cool with CSS pseudo-elements</li>
+          <h3 class="list-title">No Status</h3>
+          <ul class="list-items" id="no_status">
+            <li class="draggable" draggable="true">
+              <div class="issue-header">
+                <option class="critical">Critical</option>
+                <div>
+                  <button class="edit-issue"><i class="fa fa-edit"></i></button>
+                  <button class="close-issue">&times;</button>
+                </div>
+              </div>
+              <div>Task 1</div>
+              <div class="issue-footer">
+                <div>Assignee:</div>
+                <option value="Assignee">Assignee</option>
+              </div>
+            </li>
+            <li class="draggable" draggable="true">
+              <div class="issue-header">
+                <option class="low">Low</option>
+                <div>
+                  <button class="edit-issue"><i class="fa fa-edit"></i></button>
+                  <button class="close-issue">&times;</button>
+                </div>
+              </div>
+              <div>Task 2</div>
+              <div class="issue-footer">
+                <div>Assignee:</div>
+                <option value="Assignee">Assignee</option>
+              </div>
+            </li>
+            <li class="draggable" draggable="true">
+              <div class="issue-header">
+                <option class="important">Important</option>
+                <div>
+                  <button class="edit-issue"><i class="fa fa-edit"></i></button>
+                  <button class="close-issue">&times;</button>
+                </div>
+              </div>
+              <div>Task 3</div>
+              <div class="issue-footer">
+                <div>Assignee:</div>
+                <option value="Assignee">Assignee</option>
+              </div>
+            </li>
           </ul>
           <div id="list-button-container">
-            <button class="add-button">Add Task</button>
+            <input class="new-task" type="text" placeholder="Add new task..." />
+            <select id="priority">
+              <option class="low" value="Low">Low</option>
+              <option class="normal" value="Normal">Normal</option>
+              <option class="important" value="Important">Important</option>
+              <option class="critical" value="Critical">Critical</option>
+            </select>
+            <select id="assignee">
+              <option value="Assignee">Assignee</option>
+              <option value="Jim">Jim</option>
+              <option value="Diana">Diana</option>
+              <option value="Lee">Lee</option>
+              <option value="John">John</option>
+            </select>
+            <button class="add-issue-button">+ Add Issue</button>
           </div>
         </div>
 
         <div class="list">
-          <h3 class="list-title">Completed Tasks</h3>
+          <h3 class="list-title">To-Do</h3>
           <ul class="list-items">
-            <li>Clear email inbox</li>
-            <li>Finalise requirements for client web design</li>
-            <li>Begin work on mock-up for client website</li>
+            <li class="draggable" draggable="true">
+              <div class="issue-header">
+                <option class="normal">Normal</option>
+                <div>
+                  <button class="edit-issue"><i class="fa fa-edit"></i></button>
+                  <button class="close-issue">&times;</button>
+                </div>
+              </div>
+              <div>To-Do 1</div>
+              <div class="issue-footer">
+                <div>Assignee:</div>
+                <option value="Assignee">Assignee</option>
+              </div>
+            </li>
           </ul>
-          <div id="list-button-container">
-            <button class="add-button">Add Task</button>
-          </div>
         </div>
 
         <div class="list">
-          <h3 class="list-title">Topics/Concepts to Revise</h3>
+          <h3 class="list-title">In Progress</h3>
 
           <ul class="list-items">
-            <li>HTML Elements</li>
-            <li>HTML Form Validation</li>
-            <li>HTML Structured Data</li>
-            <li>Advanced CSS Selectors</li>
-            <li>CSS Transforms</li>
-            <li>CSS Animations</li>
-            <li>CSS Flexbox</li>
-            <li>CSS Grid</li>
-            <li>CSS Methodologies (BEM, SMACSS etc.)</li>
-            <li>SASS/SCSS</li>
-            <li>Layout Fallbacks</li>
-            <li>Responsive Design</li>
-            <li>Design Patterns</li>
-            <li>JavaScript Fundamentals</li>
-            <li>JavaScript OOP</li>
-            <li>JavaScript DOM Manipulation</li>
-            <li>JavaScript Debugging Techniques</li>
-            <li>Node Package Manager</li>
-            <li>Grunt/Gulp</li>
-            <li>GitHub</li>
-            <li>Git Commands</li>
-            <li>Web Accessibility</li>
-            <li>Web Performance</li>
-            <li>Web Hosting</li>
-            <li>Browser Dev Tools</li>
-            <li>Google Analytics</li>
-            <li>Basic Photoshop/Sketch Usage</li>
+            <li class="draggable" draggable="true">
+              <div class="issue-header">
+                <option class="low">Low</option>
+                <div>
+                  <button class="edit-issue"><i class="fa fa-edit"></i></button>
+                  <button class="close-issue">&times;</button>
+                </div>
+              </div>
+              <div>In progress 1</div>
+              <div class="issue-footer">
+                <div>Assignee:</div>
+                <option value="Assignee">Assignee</option>
+              </div>
+            </li>
           </ul>
-          <div id="list-button-container">
-            <button class="add-button">Add Task</button>
-          </div>
         </div>
 
         <div class="list">
-          <h3 class="list-title">Topics/Concepts to Learn</h3>
+          <h3 class="list-title">Completed</h3>
 
           <ul class="list-items">
-            <li>HTML 5.2 New Features</li>
-            <li>Responsive Images (picture element, srcset/sizes etc.)</li>
-            <li>Serverless</li>
-            <li>Variable Fonts</li>
-            <li>Shadow DOM</li>
-            <li>ES6+</li>
-            <li>JSON & AJAX</li>
-            <li>API's</li>
-            <li>JavaScript Patterns</li>
-            <li>JavaScript Testing</li>
-            <li>jQuery</li>
-            <li>SVG</li>
-            <li>React JS</li>
-            <li>Angular JS</li>
-            <li>TypeScript</li>
-            <li>Vue JS</li>
-            <li>Node JS</li>
-            <li>Webpack</li>
-            <li>SEO Techniques</li>
-            <li>HTML Emails</li>
-            <li>WordPress</li>
-            <li>Static Site Generators (Jekyll, Hugo, Gatsby etc.)</li>
+            <li class="draggable" draggable="true">
+              <div class="issue-header">
+                <option class="important">Important</option>
+                <div>
+                  <button class="edit-issue"><i class="fa fa-edit"></i></button>
+                  <button class="close-issue">&times;</button>
+                </div>
+              </div>
+              <div>Completed 1</div>
+              <div class="issue-footer">
+                <div>Assignee:</div>
+                <option value="Assignee">Assignee</option>
+              </div>
+            </li>
+            <li class="draggable" draggable="true">
+              <div class="issue-header">
+                <option class="normal">Normal</option>
+                <div>
+                  <button class="edit-issue"><i class="fa fa-edit"></i></button>
+                  <button class="close-issue">&times;</button>
+                </div>
+              </div>
+              <div>Completed 2</div>
+              <div class="issue-footer">
+                <div>Assignee:</div>
+                <option value="Assignee">Assignee</option>
+              </div>
+            </li>
           </ul>
-          <div id="list-button-container">
-            <button class="add-button">Add Task</button>
-          </div>
         </div>
       </section>
     </div>
+    <script src="script/issues.js"></script>
   </body>
 </html>
