--- a/client/main-board.html
+++ b/client/main-board.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Issues</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link
       rel="stylesheet"
@@ -37,7 +37,7 @@
             <select id="assignee">
               <option value="">Unassigned</option>
             </select>
-            <button class="add-issue-button">+ Add Issue</button>
+            <button class="add-issue-button">Add Issue</button>
           </div>
         </div>
 
